--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -38,7 +38,7 @@ html {
 
 body {
   font-family: $font-primary;
-  color: $color-secondary;
+  font-color: $color-secondary;
   line-height: 1.6;
   min-height: 100vh;
 }
