--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background-color: $color-secondary;
+  background-color: $color-primary-dark;
   /* goes all the way from one end to the other end full bleed section */
   grid-column: full-start / full-end;
 }
