overall grid layout responsive improvements

--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ html {
 
 body {
   font-family: "Nunito", sans-serif;
-  font-color: #101d2c;
+  color: #101d2c;
   line-height: 1.6;
   min-height: 100vh; }
 
@@ -34,7 +34,7 @@ body {
   grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end]; }
   @media only screen and (max-width: 62.5rem) {
     .container {
-      grid-template-rows: 80vh min-content 40vw min-content;
+      grid-template-rows: 80vh 80vh min-content 40vw min-content;
       /* comments for the grid-template-columns */
       grid-template-columns: [sidebar-start] 7rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
       /* why only name the columns and not the rows? */ } }
@@ -73,6 +73,7 @@ body {
 .header {
   /* 6/8 columns = for the header, 2/8 columns for the players section */
   grid-column: full-start / col-end 6;
+  /* MEDIA QUERY - when width of screen is 62.5rem ($bp-large */
   background-image: linear-gradient(rgba(249, 247, 246, 0.65), rgba(249, 247, 246, 0.65)), url(../img/header-image1.png);
   background-size: cover;
   background-position: center;
@@ -84,6 +85,9 @@ body {
   grid-template-columns: minmax(min-content, max-content);
   grid-row-gap: 1.5rem;
   justify-content: center; }
+  @media only screen and (max-width: 62.5rem) {
+    .header {
+      grid-column: full-start / full-end; } }
   .header__headline-text {
     align-self: end; }
   .header__btn {
@@ -114,12 +118,16 @@ body {
 .players {
   background-color: #0a19a1;
   grid-column: col-start 7 / full-end;
+  /* MEDIA QUERY - when width of screen is 62.5rem ($bp-large */
   padding: 3rem;
   display: grid;
   align-content: center;
   justify-content: center;
   grid-row-gap: 2rem;
   justify-items: center; }
+  @media only screen and (max-width: 62.5rem) {
+    .players {
+      grid-column: full-start / full-end; } }
   .players__list {
     display: grid;
     /* first column for images, second for the text */
@@ -249,7 +257,7 @@ body {
     color: #aaa; }
 
 .heading-3 {
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   text-transform: uppercase;
   color: #101d2c; }
 
