--- a/css/style.css
+++ b/css/style.css
@@ -34,9 +34,7 @@ body {
   grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end]; }
   @media only screen and (max-width: 62.5rem) {
     .container {
-      grid-template-rows: 80vh 70vh min-content 40vw min-content;
-      /* comments for the grid-template-columns */
-      grid-template-columns: [sidebar-start] 7rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
+      grid-template-rows: 15vh 80vh 70vh min-content 40vw min-content;
       /* why only name the columns and not the rows? */ } }
 
 .features {
@@ -150,17 +148,8 @@ body {
   background-color: #f9f7f6;
   grid-column: full-start / full-end;
   display: grid;
-  display: grid;
   grid-template-columns: 1fr 6rem 1fr;
   grid-template-rows: 2rem 6rem 2rem 6rem; }
-  @media only screen and (max-width: 62.5rem) {
-    .sidebar {
-      /* sidebar to start at the grid line sidebar-start, end at sidebar-end */
-      grid-column: sidebar-start / sidebar-end;
-      /* second step - want it to span from the beginning of the grid to the end */
-      /* (what is meant above is - all the way down the webpage) */
-      /* keyword for the end is -1 */
-      grid-row: 1 / -1; } }
   .sidebar__badge {
     width: 100%;
     grid-column: 2 / 3;
