change of mobile sidebar

--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -40,7 +40,7 @@
     width: 3rem;
     // define the inner container (with span and before and after elements) as a grid to group
     display: grid;
-    // align them vertically centrally (rather than at top of blue button as before)
+    // align them vertically centrally - rather than at top of blue button as before
     align-items: center;
   }
   span {
