--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,6 @@
 @import 'footer';
 @import 'header';
 @import 'players';
-@import 'sidebar';
+@import 'navbar';
 @import 'story';
 @import 'typography';
