--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -23,20 +23,18 @@ html {
 
 body {
   font-family: "Nunito", sans-serif;
-  font-color: #101d2c;
+  color: #101d2c;
   line-height: 1.6;
   min-height: 100vh; }
 
 .container {
   display: grid;
   /* comments for the grid-template-rows */
-  grid-template-rows: 10vh 80vh min-content 40vw min-content;
+  grid-template-rows: 10rem 80vh min-content 40vw min-content;
   grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end]; }
   @media only screen and (max-width: 62.5rem) {
     .container {
-      grid-template-rows: 80vh min-content 40vw min-content;
-      /* comments for the grid-template-columns */
-      grid-template-columns: [sidebar-start] 7rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
+      grid-template-rows: 15vh 80vh 70vh min-content 40vw min-content;
       /* why only name the columns and not the rows? */ } }
 
 .features {
@@ -73,6 +71,7 @@ body {
 .header {
   /* 6/8 columns = for the header, 2/8 columns for the players section */
   grid-column: full-start / col-end 6;
+  /* MEDIA QUERY - when width of screen is 62.5rem ($bp-large */
   background-image: linear-gradient(rgba(249, 247, 246, 0.65), rgba(249, 247, 246, 0.65)), url(../img/header-image1.png);
   background-size: cover;
   background-position: center;
@@ -84,6 +83,9 @@ body {
   grid-template-columns: minmax(min-content, max-content);
   grid-row-gap: 1.5rem;
   justify-content: center; }
+  @media only screen and (max-width: 62.5rem) {
+    .header {
+      grid-column: full-start / full-end; } }
   .header__headline-text {
     align-self: end; }
   .header__btn {
@@ -114,21 +116,26 @@ body {
 .players {
   background-color: #0a19a1;
   grid-column: col-start 7 / full-end;
+  /* MEDIA QUERY - when width of screen is 62.5rem ($bp-large */
   padding: 3rem;
   display: grid;
   align-content: center;
-  justify-content: center; }
+  justify-content: center;
+  grid-row-gap: 2rem;
+  justify-items: center; }
+  @media only screen and (max-width: 62.5rem) {
+    .players {
+      grid-column: full-start / full-end; } }
   .players__list {
     display: grid;
     /* first column for images, second for the text */
     grid-template-columns: min-content max-content;
     grid-column-gap: 2rem;
     grid-row-gap: 5vh;
-    /* align-items: center; */
-    margin-top: 1.5rem; }
+    align-items: center; }
   .players__img {
-    /* width: 140px */
-    width: 14rem;
+    /* width: 130px */
+    width: 13rem;
     border-radius: 50%;
     display: block; }
   .players__goals {
@@ -137,29 +144,24 @@ body {
     color: #f9f7f6;
     margin-top: -3px; }
 
-.sidebar {
+.navbar {
   background-color: #f9f7f6;
   grid-column: full-start / full-end;
   display: grid;
-  display: grid;
-  grid-template-columns: 1fr 6rem 1fr;
-  grid-template-rows: 2rem 6rem 2rem 6rem; }
-  @media only screen and (max-width: 62.5rem) {
-    .sidebar {
-      /* sidebar to start at the grid line sidebar-start, end at sidebar-end */
-      grid-column: sidebar-start / sidebar-end;
-      /* second step - want it to span from the beginning of the grid to the end */
-      /* (what is meant above is - all the way down the webpage) */
-      /* keyword for the end is -1 */
-      grid-row: 1 / -1; } }
-  .sidebar__badge {
+  grid-template-columns: 1rem 8rem 1fr 8rem 1rem;
+  grid-column-gap: 1rem;
+  grid-template-rows: 1rem 8rem 1rem;
+  align-items: center; }
+  .navbar__badge {
     width: 100%;
     grid-column: 2 / 3;
-    grid-row: 2 / 3; }
+    grid-row: 2 / 3;
+    margin: 0.5rem; }
 
 .menu-toggle {
-  grid-column: 2 / 3;
-  grid-row: 4 / 5;
+  grid-column: 4 / 5;
+  grid-row: 2 / 3;
+  height: 100%;
   background: transparent;
   border: none;
   cursor: pointer;
@@ -167,7 +169,7 @@ body {
   flex-direction: column;
   /* WHY? - remember the flex-direction has now been set as column so align-items will now be horizontally */
   align-items: center;
-  /* WHY? - remember the flex-direction has now been set as column so justify-content will now be horizontally */
+  /* WHY? - remember the flex-direction has now been set as column so justify-content will now be vertically */
   justify-content: center;
   background-color: #0c22e8;
   position: relative;
@@ -248,7 +250,7 @@ body {
     color: #aaa; }
 
 .heading-3 {
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   text-transform: uppercase;
   color: #101d2c; }
 
