--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ body {
 .container {
   display: grid;
   /* comments for the grid-template-rows */
-  grid-template-rows: 10vh 80vh min-content 40vw min-content;
+  grid-template-rows: 10rem 80vh min-content 40vw min-content;
   grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end]; }
   @media only screen and (max-width: 62.5rem) {
     .container {
@@ -144,17 +144,24 @@ body {
     color: #f9f7f6;
     margin-top: -3px; }
 
-.sidebar {
+.navbar {
   background-color: #f9f7f6;
   grid-column: full-start / full-end;
   display: grid;
-  grid-template-columns: 6rem 1fr 6rem; }
-  .sidebar__badge {
+  grid-template-columns: 1rem 8rem 1fr 8rem 1rem;
+  grid-column-gap: 1rem;
+  grid-template-rows: 1rem 8rem 1rem;
+  align-items: center; }
+  .navbar__badge {
     width: 100%;
-    grid-column: 1 / 2; }
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+    margin: 0.5rem; }
 
 .menu-toggle {
-  grid-column: 3 / 4;
+  grid-column: 4 / 5;
+  grid-row: 2 / 3;
+  height: 100%;
   background: transparent;
   border: none;
   cursor: pointer;
