--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -48,7 +48,7 @@ body {
   /* comments for the grid-template-rows */
   // 80% of the view-height, then min-content - smallest size of box without overflowing content.
   // 40% of view-width - whats visible in the viewport depending on how wide you make screen.
-  grid-template-rows: 10vh 80vh min-content 40vw min-content;
+  grid-template-rows: 10rem 80vh min-content 40vw min-content;
   grid-template-columns:
     [full-start] minmax(6rem, 1fr) [center-start] repeat(
       8,
