--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -1,16 +1,23 @@
-.sidebar {
+.navbar {
   background-color: $color-grey-1;
   grid-column: full-start / full-end;
   display: grid;
-  grid-template-columns: 6rem 1fr 6rem;
+  grid-template-columns: 1rem 8rem 1fr 8rem 1rem;
+  grid-column-gap: 1rem;
+  grid-template-rows: 1rem 8rem 1rem;
+  align-items: center;
   &__badge {
     width: 100%;
-    grid-column: 1 / 2;
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+    margin: 0.5rem;
   }
 }
 
 .menu-toggle {
-  grid-column: 3 / 4;
+  grid-column: 4 / 5;
+  grid-row: 2 / 3;
+  height: 100%;
   background: transparent;
   border: none;
   cursor: pointer;
