--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ body {
       grid-template-rows: 15vh 80vh 70vh min-content 40vw min-content; } }
   @media only screen and (max-width: 50em) {
     .container {
-      grid-template-rows: 10vh 90vh 70vh min-content 40vw min-content; } }
+      grid-template-rows: 15vh 85vh 70vh min-content 40vw min-content; } }
 
 .features {
   /* features go from center-start to center-end - beginning to end of centre 8 grid */
@@ -82,7 +82,7 @@ body {
   padding-top: 4rem;
   display: grid;
   /* grid row explanation */
-  grid-template-rows: 1fr min-content minmax(12rem, min-content) min-content;
+  grid-template-rows: 1fr min-content minmax(10rem, min-content) min-content;
   grid-template-columns: minmax(min-content, max-content);
   grid-row-gap: 1.5rem;
   justify-content: center; }
@@ -155,6 +155,12 @@ body {
   grid-column-gap: 1rem;
   grid-template-rows: 1rem 8rem 1rem;
   align-items: center; }
+  @media only screen and (max-width: 62.5rem) {
+    .navbar {
+      grid-template-rows: 2rem 8rem 2rem; } }
+  @media only screen and (max-width: 50em) {
+    .navbar {
+      grid-template-rows: 2.2rem 8rem 2.2rem; } }
   .navbar__badge {
     width: 100%;
     grid-column: 2 / 3;
