--- a/sass/_players.scss
+++ b/sass/_players.scss
@@ -29,6 +29,12 @@
     grid-column-gap: 2rem;
     // row 5% of viewport height - because margin spacing should change whenever change height of viewport
     grid-row-gap: 5vh;
+    @media only screen and (max-width: $bp-large) {
+      grid-row-gap: 3vh;
+    }
+    @media only screen and (max-width: $bp-medium) {
+      grid-row-gap: 2vh;
+    }
     // align the text in grid vertically
     align-items: center;
   }
@@ -38,6 +44,9 @@
     width: 13rem;
     border-radius: 50%;
     display: block;
+    @media only screen and (max-width: $bp-large) {
+      width: 12rem;
+    }
   }
 
   &__goals {
@@ -46,5 +55,8 @@
     color: $color-grey-1;
     // move the text up slightly so not too far away from players names
     margin-top: -3px;
+    @media only screen and (max-width: $bp-large) {
+      font-size: 1.2rem;
+    }
   }
 }
