--- a/sass/_players.scss
+++ b/sass/_players.scss
@@ -42,7 +42,8 @@
     border-radius: 50%;
     display: block;
     @media only screen and (max-width: $bp-large) {
-      width: 7rem;
+      width: 6rem;
+      padding-right: 3px;
     }
   }
 
@@ -54,6 +55,14 @@
     margin-top: -3px;
     @media only screen and (max-width: $bp-large) {
       font-size: 1rem;
+      margin-top: 0px;
+    }
+  }
+  &__heading {
+  }
+  &__name {
+    @media only screen and (max-width: $bp-large) {
+      line-height: 1.7rem;
     }
   }
 }
