--- a/sass/_players.scss
+++ b/sass/_players.scss
@@ -31,9 +31,11 @@
     grid-row-gap: 5vh;
     @media only screen and (max-width: $bp-large) {
       grid-template-columns: repeat(3, 5rem min-content);
+      grid-column-gap: 0.5rem;
     }
     // align the text in grid vertically
     align-items: center;
+    justify-items: center;
   }
 
   &__img {
@@ -42,8 +44,8 @@
     border-radius: 50%;
     display: block;
     @media only screen and (max-width: $bp-large) {
-      width: 6rem;
-      padding-right: 3px;
+      width: 7rem;
+      padding: 0 5px 0;
     }
   }
 
@@ -57,8 +59,6 @@
       font-size: 1rem;
       margin-top: 0px;
     }
-  }
-  &__heading {
   }
   &__name {
     @media only screen and (max-width: $bp-large) {
