--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -11,9 +11,10 @@ $font-primary: 'Nunito', sans-serif;
 $font-display: 'Lato', sans-serif;
 
 /* RESPONSIVE BREAKPOINTS */
-$bp-largest: 75em; // 1200px divided by 16 (16 -> default font-size for a browser)
+$bp-largest: 87.5em; // 1400px divided by 16 (16 -> default font-size for a browser)
 $bp-large: 62.5rem; // 1000px divided by 16
 $bp-medium: 50em; // 800px divided by 16
+$bp-small: 37.5rem; // 600px divided by 16
 
 * {
   margin: 0;
