--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ html {
   box-sizing: border-box;
   font-size: 62.5%;
   /* 1rem = 10px, 10px/16px = 62.5% */ }
-  @media only screen and (max-width: 75em) {
+  @media only screen and (max-width: 87.5em) {
     html {
       font-size: 50%; } }
 
@@ -115,17 +115,18 @@ body {
 
 .players {
   background-color: #0a19a1;
-  grid-column: col-start 7 / full-end;
-  /* MEDIA QUERY - when width of screen is 62.5rem ($bp-large */
-  padding: 3rem;
   display: grid;
+  grid-column: col-start 7 / full-end;
+  padding: 3rem;
   align-content: center;
   justify-content: center;
   grid-row-gap: 2rem;
-  justify-items: center; }
+  justify-items: center;
+  /* MEDIA QUERY - when width of screen is 62.5rem ($bp-large */ }
   @media only screen and (max-width: 62.5rem) {
     .players {
-      grid-column: full-start / full-end; } }
+      grid-column: full-start / full-end;
+      justify-content: space-evenly; } }
   .players__list {
     display: grid;
     /* first column for images, second for the text */
@@ -134,10 +135,16 @@ body {
     grid-row-gap: 5vh;
     align-items: center;
     justify-items: center; }
+    @media only screen and (max-width: 87.5em) {
+      .players__list {
+        grid-column-gap: 1.2rem;
+        grid-row-gap: 3vh; } }
     @media only screen and (max-width: 62.5rem) {
       .players__list {
-        grid-template-columns: repeat(3, 5rem min-content);
-        grid-column-gap: 0.5rem; } }
+        grid-template-columns: repeat(3, min-content max-content); } }
+    @media only screen and (max-width: 37.5rem) {
+      .players__list {
+        grid-template-columns: repeat(3, 6rem min-content); } }
   .players__img {
     /* width: 130px */
     width: 13rem;
@@ -145,8 +152,7 @@ body {
     display: block; }
     @media only screen and (max-width: 62.5rem) {
       .players__img {
-        width: 7rem;
-        padding: 0 5px 0; } }
+        width: 6.5rem; } }
   .players__goals {
     text-transform: uppercase;
     font-size: 1.5rem;
@@ -154,7 +160,7 @@ body {
     margin-top: -3px; }
     @media only screen and (max-width: 62.5rem) {
       .players__goals {
-        font-size: 1rem;
+        font-size: 0.75rem;
         margin-top: 0px; } }
   @media only screen and (max-width: 62.5rem) {
     .players__name {
