--- a/css/style.css
+++ b/css/style.css
@@ -150,6 +150,9 @@ body {
     width: 13rem;
     border-radius: 50%;
     display: block; }
+    @media only screen and (max-width: 62.5rem) {
+      .players__img {
+        width: 7.5rem; } }
   .players__goals {
     text-transform: uppercase;
     font-size: 1.5rem;
