--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -17,12 +17,24 @@
     //align image in the center of the container vertically.
     // needs to be done cause images have aspect ratio - need to be aligned.
     align-items: center;
+    @media only screen and (max-width: $bp-large) {
+      grid-column: full-start / full-end;
+      padding: 6rem;
+    }
   }
   /* Set the styles for images */
   &__img--1 {
     width: 100%;
     grid-row: 2 / 6;
     grid-column: 1 / 5;
+    // we have a 6x6 grid so lets put this image starting on grid column 1 to end at grid column 3
+    @media only screen and (max-width: $bp-large) {
+      grid-column: 1 / 4;
+      // row - from the start to the end (could have used full-start / full end)
+      grid-row: 1 / -1;
+      height: 100%;
+      width: 100%;
+    }
   }
 
   &__img--2 {
@@ -30,6 +42,13 @@
     z-index: 1;
     grid-row: 1 / 5;
     grid-column: 4 / 7;
+    @media only screen and (max-width: $bp-large) {
+      // row - from the start to the end (could have used full-start / full end)
+      grid-row: 1 / -1;
+      // don't want width of 110%
+      width: 100%;
+      height: 80%;
+    }
   }
 
   &__content {
@@ -42,9 +61,13 @@
     //vertically centered
     justify-content: center;
     align-items: flex-start;
-
     // Could've done this with grid - display: grid, align-content: center
     // equivalent of align-items? justify-items: start - align rows in grid
+    @media only screen and (max-width: $bp-large) {
+      grid-column: full-start / full-end;
+      // swap around the graffiti art description with the images below it
+      grid-row: 5 / 6;
+    }
   }
 
   &__text {
