--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -17,7 +17,7 @@ html {
   box-sizing: border-box;
   font-size: 62.5%;
   /* 1rem = 10px, 10px/16px = 62.5% */ }
-  @media only screen and (max-width: 75em) {
+  @media only screen and (max-width: 87.5em) {
     html {
       font-size: 50%; } }
 
@@ -31,11 +31,11 @@ body {
   display: grid;
   /* comments for the grid-template-rows */
   grid-template-rows: 10rem 80vh min-content 40vw min-content;
-  grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end]; }
+  grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
+  /* AFTER NOTES */ }
   @media only screen and (max-width: 62.5rem) {
     .container {
-      grid-template-rows: 15vh 80vh 70vh min-content 40vw min-content;
-      /* why only name the columns and not the rows? */ } }
+      grid-template-rows: 10rem calc(100vh-10rem) max-content 40vw min-content; } }
 
 .features {
   /* features go from center-start to center-end - beginning to end of centre 8 grid */
@@ -79,7 +79,7 @@ body {
   padding-top: 4rem;
   display: grid;
   /* grid row explanation */
-  grid-template-rows: 1fr min-content minmax(6rem, min-content) min-content;
+  grid-template-rows: 1fr min-content minmax(10rem, min-content) min-content;
   grid-template-columns: minmax(min-content, max-content);
   grid-row-gap: 1.5rem;
   justify-content: center; }
@@ -89,14 +89,14 @@ body {
   .header__headline-text {
     align-self: end; }
   .header__btn {
-    align-self: start;
+    align-self: center;
     justify-self: start; }
   .header__corporate-text {
     display: grid;
     grid-template-columns: 1fr max-content 1fr;
     grid-column-gap: 15px;
     align-items: center;
-    font-size: 1.6rem;
+    font-size: 2rem;
     color: #101d2c;
     text-transform: uppercase; }
     .header__corporate-text::before, .header__corporate-text::after {
@@ -115,34 +115,56 @@ body {
 
 .players {
   background-color: #0a19a1;
-  grid-column: col-start 7 / full-end;
-  /* MEDIA QUERY - when width of screen is 62.5rem ($bp-large */
-  padding: 3rem;
   display: grid;
+  grid-column: col-start 7 / full-end;
+  padding: 3rem;
   align-content: center;
   justify-content: center;
   grid-row-gap: 2rem;
-  justify-items: center; }
+  justify-items: center;
+  /* MEDIA QUERY - when width of screen is 62.5rem ($bp-large */ }
   @media only screen and (max-width: 62.5rem) {
     .players {
-      grid-column: full-start / full-end; } }
+      grid-column: full-start / full-end;
+      justify-content: space-evenly; } }
   .players__list {
     display: grid;
     /* first column for images, second for the text */
     grid-template-columns: min-content max-content;
     grid-column-gap: 2rem;
     grid-row-gap: 5vh;
-    align-items: center; }
+    align-items: center;
+    justify-items: center; }
+    @media only screen and (max-width: 87.5em) {
+      .players__list {
+        grid-column-gap: 1.2rem;
+        grid-row-gap: 3vh; } }
+    @media only screen and (max-width: 62.5rem) {
+      .players__list {
+        grid-template-columns: repeat(3, min-content max-content); } }
+    @media only screen and (max-width: 37.5rem) {
+      .players__list {
+        grid-template-columns: repeat(3, 6rem min-content); } }
   .players__img {
     /* width: 130px */
     width: 13rem;
     border-radius: 50%;
     display: block; }
+    @media only screen and (max-width: 62.5rem) {
+      .players__img {
+        width: 7.5rem; } }
   .players__goals {
     text-transform: uppercase;
     font-size: 1.5rem;
     color: #f9f7f6;
     margin-top: -3px; }
+    @media only screen and (max-width: 62.5rem) {
+      .players__goals {
+        font-size: 0.75rem;
+        margin-top: 0px; } }
+  @media only screen and (max-width: 62.5rem) {
+    .players__name {
+      line-height: 1.7rem; } }
 
 .navbar {
   background-color: #f9f7f6;
@@ -150,7 +172,7 @@ body {
   display: grid;
   grid-template-columns: 1rem 8rem 1fr 8rem 1rem;
   grid-column-gap: 1rem;
-  grid-template-rows: 1rem 8rem 1rem;
+  grid-template-rows: 10% 80% 10%;
   align-items: center; }
   .navbar__badge {
     width: 100%;
@@ -213,15 +235,30 @@ body {
     grid-template-rows: repeat(6, 1fr);
     grid-template-columns: repeat(6, 1fr);
     align-items: center; }
+    @media only screen and (max-width: 62.5rem) {
+      .story__pictures {
+        grid-column: full-start / full-end;
+        padding: 6rem; } }
   .story__img--1 {
     width: 100%;
     grid-row: 2 / 6;
     grid-column: 1 / 5; }
+    @media only screen and (max-width: 62.5rem) {
+      .story__img--1 {
+        grid-column: 1 / 4;
+        grid-row: 1 / -1;
+        height: 100%;
+        width: 100%; } }
   .story__img--2 {
     width: 110%;
     z-index: 1;
     grid-row: 1 / 5;
     grid-column: 4 / 7; }
+    @media only screen and (max-width: 62.5rem) {
+      .story__img--2 {
+        grid-row: 1 / -1;
+        width: 100%;
+        height: 80%; } }
   .story__content {
     background-color: #f9f7f6;
     grid-column: col-start 5 / full-end;
@@ -230,6 +267,10 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: flex-start; }
+    @media only screen and (max-width: 62.5rem) {
+      .story__content {
+        grid-column: full-start / full-end;
+        grid-row: 5 / 6; } }
   .story__text {
     font-size: 1.5rem;
     margin-bottom: 4rem; }
@@ -239,7 +280,7 @@ body {
   font-weight: 400; }
 
 .heading-1 {
-  font-size: 4.5rem;
+  font-size: 4rem;
   color: #0a19a1;
   line-height: 1; }
 
@@ -250,12 +291,12 @@ body {
     color: #aaa; }
 
 .heading-3 {
-  font-size: 1.5rem;
+  font-size: 2rem;
   text-transform: uppercase;
   color: #101d2c; }
 
 .heading-4 {
-  font-size: 1.9rem; }
+  font-size: 1.5rem; }
   .heading-4--light {
     color: #aaa; }
 
