--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -15,7 +15,7 @@ $bp-largest: 87.5em; // 1400px divided by 16 (16 -> default font-size for a brow
 $bp-large: 62.5rem; // 1000px divided by 16
 $bp-medium: 50em; // 800px divided by 16
 $bp-small: 37.5rem; // 600px divided by 16
-
+$bp-smallest: 22rem; // 350px
 * {
   margin: 0;
   padding: 0;
